config/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vopex-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vopex-app
  template:
    metadata:
      labels:
        app: vopex-app
    spec:
      containers:
        - name: vopex-app
          image: your_docker_image
          ports:
            - containerPort: 3000
