config/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vopex-app
spec:
  selector:
    app: vopex-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
