config/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vopex-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your_domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vopex-app
                port:
                  number: 80
